--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>India Lottery 2</title>
+    <title>
+      North East India Lottery | Best Online Lottery in North East India
+    </title>
     <meta
       name="description"
-      content="Play India Lottery and stand a chance to win big. Join now for the best online lottery experience in India. Safe, secure, and easy to play."
+      content="North East India Lottery and stand a chance to win big. Join now for the best online lottery experience in India. Safe, secure, and easy to play."
     />
   </head>
   <body>
